--- a/Counters.ipynb
+++ b/Counters.ipynb
@@ -97,7 +97,7 @@
         "count_name = collections.Counter(name for name, color in colors)\n",
         "count_name"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -116,6 +116,42 @@
     {
       "metadata": {
         "id": "Wp_PcRy-hNvO",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 102
+        },
+        "outputId": "0f3e5df3-8607-4296-e3f8-55e6dd48993a"
+      },
+      "cell_type": "code",
+      "source": [
+        "import collections\n",
+        "count_all = collections.Counter((name, color) for name, color in colors)\n",
+        "count_all"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Counter({('Ay', 'Blue'): 1,\n",
+              "         ('Ay', 'Grey'): 1,\n",
+              "         ('Ay', 'red'): 1,\n",
+              "         ('Dp', 'White'): 1,\n",
+              "         ('Pk', 'Black'): 1})"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "Rmb7fwXomk4l",
         "colab_type": "code",
         "colab": {}
       },
